codex-rs/tui/src/snapshots/codex_tui__process_manager__tests__process_manager_empty.snap
---
source: tui/src/process_manager.rs
expression: render_snapshot(&view)
---
┌Unified Exec Sessions─────────────────────────────────────────────────────────┐
│Session    Status     Command                Started          Last output     │
│                      (no active sessions)                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Output preview────────────────────────────────────────────────────────────────┐
│Select a session to view recent output.                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑/↓ navigate  •  Open log (o)  •  Input (i)  •  Kill (k)  •  Remove (d)  •  Refr
